# ugsdr

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  FindIPP.cmake  README.md
.github/workflows/: cmake.yml
benchmark/: CMakeLists.txt  benchmark.cpp
src/: CMakeLists.txt  common.hpp  main.cpp  signal_parameters.hpp
src/acquisition/: acquisition_parameters.hpp  acquisition_result.hpp  fse.hpp
src/antijamming/: additional_signal_generator.hpp  jamming_detection.hpp  jse.hpp  narrowband.hpp
src/correlator/: af_correlator.hpp  correlator.hpp  ipp_correlator.hpp
src/dfe/: dfe.hpp
src/digital_filter/: fir.hpp  ipp_customized_fir.hpp  ipp_fir.hpp
src/ephemeris/: Ephemeris.hpp  GalileoEphemeris.hpp  GlonassEphemeris.hpp  GpsEphemeris.hpp
src/helpers/: BbpPackedSpan.hpp  NtlabPackedSpan.hpp  af_array_proxy.hpp  ipp_complex_type_converter.hpp  is_complex.hpp  rtklib_helpers.hpp  visualizer.hpp
src/matched_filter/: af_matched_filter.hpp  ipp_matched_filter.hpp  matched_filter.hpp
src/math/: abs.hpp  af_abs.hpp  af_conj.hpp  af_dft.hpp  af_max_index.hpp  af_mean_stddev.hpp  af_reshape_and_sum.hpp  conj.hpp  dft.hpp  fft.hpp  ipp_abs.hpp  ipp_complex_type_converter.hpp  ipp_conj.hpp  ipp_dft.hpp  ipp_max_index.hpp  ipp_mean_stddev.hpp  ipp_reshape_and_sum.hpp  ipp_stft.hpp  max_index.hpp  mean_stddev.hpp  reshape_and_sum.hpp  stft.hpp  upsample.hpp
src/measurements/: measurement_engine.hpp  observable.hpp  timescale.hpp
src/mixer/: af_mixer.hpp  batch_mixer.hpp  cuda_mixer.cu  cuda_mixer.cuh  ipp_mixer.hpp  mixer.hpp  nco.hpp  table_mixer.hpp
src/positioning/: standalone_engine.hpp  standalone_rtklib.hpp
src/prn_codes/: BeiDouB1C.hpp  BeiDouB1I.hpp  GalileoE1b.hpp  GalileoE1c.hpp  GalileoE5.hpp  GalileoE5a.hpp  GalileoE5aI.hpp  GalileoE5aQ.hpp  GalileoE5bI.hpp  GalileoE5bQ.hpp  GalileoE6b.hpp  GalileoE6c.hpp  GalileoMemoryCodes.cpp  GlonassOf.hpp  GoldCodes.hpp  GpsL1Ca.hpp  GpsL2CM.hpp  GpsL5I.hpp  GpsL5Q.hpp  L2CM.hpp  L5.hpp  MemoryCodes.hpp  NavICL5Ca.hpp  QzssL1Ca.hpp  QzssL1Saif.hpp  QzssL2CM.hpp  QzssL5I.hpp  QzssL5Q.hpp  SbasL1Ca.hpp  SbasL5I.hpp  SbasL5Q.hpp  Weil.hpp  codegen.hpp  codegen_wrapper.hpp  galois_lfsr.hpp  lfsr.hpp
src/resample/: af_decimator.hpp  af_resampler.hpp  af_upsampler.hpp  decimator.hpp  ipp_decimator.hpp  ipp_resampler.hpp  ipp_upsampler.hpp  resampler.hpp  upsampler.hpp
src/serialization/: serialization.hpp
src/tracking/: tracker.hpp  tracking_parameters.hpp
test/: CMakeLists.txt  CMakeLists.txt.in  basic_tests.cpp  integration_tests.cpp  test.cpp
